[gd_scene load_steps=3 format=2]

[ext_resource path="res://themes/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/TutorialSelection.gd" type="Script" id=2]

[node name="TutorialSelection" type="Node"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 1060.0

[node name="TutorialsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1880.0
margin_bottom = 76.0
text = "Tutorials"
align = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 1880.0
margin_bottom = 954.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 30
custom_constants/hseparation = 30
columns = 3

[node name="Tutorial_1_btn" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_right = 317.0
margin_bottom = 82.0
text = "Level 1"

[node name="Tutorial_2_btn" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 347.0
margin_right = 664.0
margin_bottom = 82.0
text = "Level 2"

[node name="Tutorial_3_btn" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 694.0
margin_right = 1011.0
margin_bottom = 82.0
text = "Level 3"

[node name="Tutorial_4_btn" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 112.0
margin_right = 317.0
margin_bottom = 194.0
text = "Level 4"

[node name="Tutorial_5_btn" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 347.0
margin_top = 112.0
margin_right = 664.0
margin_bottom = 194.0
text = "Level 5"

[node name="Back_btn" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 958.0
margin_right = 198.0
margin_bottom = 1040.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/Tutorial_1_btn" to="." method="_on_Tutorial_1_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/Tutorial_2_btn" to="." method="_on_Tutorial_2_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/Tutorial_3_btn" to="." method="_on_Tutorial_3_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/Tutorial_4_btn" to="." method="_on_Tutorial_4_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/Tutorial_5_btn" to="." method="_on_Tutorial_5_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back_btn" to="." method="_on_Back_btn_pressed"]
